--- a/examples/pluscal/config.yaml
+++ b/examples/pluscal/config.yaml
@@ -8,9 +8,11 @@ checkpoint_interval: 10 # Save checkpoints every N iterations
 log_level: "INFO" # Logging level (DEBUG, INFO, WARNING, ERROR, CRITICAL)
 log_dir: null # Custom directory for logs (default: output_dir/logs)
 random_seed: 42 # Random seed for reproducibility (null = random, 42 = default)
+language: "tla" # Hint templates/formatting for TLA+/PlusCal
+file_suffix: ".tla" # Ensure .tla is used for saved programs
 
 # Evolution settings
-diff_based_evolution: false # Use diff-based evolution (true) or full rewrites (false)
+diff_based_evolution: true # Use diff-based evolution (true) or full rewrites (false)
 max_code_length: 10000 # Maximum allowed code length in characters
 
 # Early stopping settings
@@ -50,9 +52,16 @@ prompt:
     
     Strict TLC-compatible output requirements:
     - Modify only the PlusCal algorithm inside the `(* --algorithm ... *)` section, strictly within the EVOLVE-BLOCK if present.
-    - Respond with the PlusCal algorithm block ONLY, starting with `(* --algorithm ...` and ending with `end algorithm *)`. No explanations, no markdown fences, no TLA+ translation, and no edits outside the block.
+    - Follow the user prompt format for expressing edits; do not include explanations.
     - Do NOT change the module header, EXTENDS, CONSTANT(S), any TLA+ operators, Init/Next/Spec, or invariant definitions.
     - Do NOT rename or alter any identifiers referenced by the TLC configuration or invariants (variables, process names, or labels such as `CS`).
+
+    Diff-based editing rules (apply minimal diffs inside EVOLVE-BLOCK):
+    - Only change lines between `\* EVOLVE-BLOCK-START` and `\* EVOLVE-BLOCK-END` in the provided program file (e.g., `examples/pluscal/initial_program.tla`).
+    - Keep the algorithm name unchanged unless strictly necessary to fix translation or model checking errors.
+    - Preserve existing labels and their spellings; add new labels only when needed.
+    - Avoid reformatting or renaming unchanged code; keep diffs as small as possible.
+    - Do not add or remove the EVOLVE-BLOCK markers themselves.
     
     PlusCal syntax constraints:
     - Declare algorithm variables on a single `variables` line with initial values; use `:=` for assignments and terminate statements with `;`.
@@ -68,7 +77,13 @@ prompt:
     - It must work with `SPECIFICATION Spec` and the existing `INVARIANTS` from the `.cfg` file.
     - Keep any labels and variable names that invariants depend on unchanged (e.g., keep `CS` if the invariant checks it).
     
-    Output strictly the PlusCal algorithm block and nothing else.
+    Invariant-driven workflow:
+    - First read and internalize the invariants defined in the TLA+ module and those referenced by the `.cfg` file; treat them as fixed requirements.
+    - Determine why the current algorithm may violate these invariants and identify the minimal behavioral changes needed.
+    - Update only within the EVOLVE-BLOCK so that the translated TLA+ satisfies all invariant checks in the `.cfg`.
+    - Do not modify invariant names or definitions, and do not rename identifiers or labels used by the invariants.
+    
+    Output only the edits as requested by the user prompt.
   # evaluator_system_message: |
   #   You are an expert PlusCal/TLA+ reviewer.
   #   Judge programs strictly on whether all invariants hold without any edits to
