--- a/examples/missionaries-and-cannibals/tlc_config.cfg
+++ b/examples/missionaries-and-cannibals/tlc_config.cfg
@@ -1,8 +1,7 @@
 SPECIFICATION FairSpec
 
 CONSTANTS
-  defaultInitValue <- defaultInitValue
-  defaultInitPrimeValue <- defaultInitValue
+  defaultInitValue = defaultInitValue
 
 INVARIANTS
   TypeOK
