--- a/examples/missionaries-and-cannibals/config.yaml
+++ b/examples/missionaries-and-cannibals/config.yaml
@@ -9,6 +9,7 @@ log_level: "INFO" # Logging level (DEBUG, INFO, WARNING, ERROR, CRITICAL)
 log_dir: null # Custom directory for logs (default: output_dir/logs)
 random_seed: 42 # Random seed for reproducibility (null = random, 42 = default)
 file_suffix: ".tla"
+language: "tla"
 
 # Evolution settings
 diff_based_evolution: true # Use diff-based evolution (true) or full rewrites (false)
